--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ body {
   height: 100%;
   margin: 0;
   font-family: 'Prompt', sans-serif !important;
-  font-size: 2em;
   color: white !important;
 }
 
@@ -34,6 +33,8 @@ body {
   background-color: rgb(158, 154, 154);
 }
 
+/*Responsive*/
+
 .feature-header {
   font-size: 9vw;
   font-weight: bold;
@@ -51,6 +52,26 @@ p {
   color: white;
 }
 
+@media (max-width: 1000px) {
+
+  .feature-header {
+    font-size: 20vw;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .feature-box-title {
+    font-size: 12vw;
+    font-weight: bold;
+    color: white;
+  }
+
+  p {
+    font-size: 6vw;
+    color: white;
+  }
+}
+
 #features {
   padding: 15% 7% 15% 7%;
 }
@@ -63,6 +84,7 @@ p {
 .glow-red {
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
 }
+
 .glow-blue {
   text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0045e6, 0 0 40px #0036e6, 0 0 50px #0036e6, 0 0 60px #002ee6, 0 0 70px #000fe6;
 }
