--- a/css/styles.css
+++ b/css/styles.css
@@ -52,22 +52,22 @@ p {
   color: white;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 980px) {
 
   .feature-header {
-    font-size: 20vw;
+    font-size: 200px;
     font-weight: bold;
     text-align: center;
   }
 
   .feature-box-title {
-    font-size: 12vw;
+    font-size: 120px;
     font-weight: bold;
     color: white;
   }
 
   p {
-    font-size: 6vw;
+    font-size: 60px;
     color: white;
   }
 }
