--- a/css/styles-page.css
+++ b/css/styles-page.css
@@ -1,80 +1,127 @@
-#Page{
-    padding: 15% 7% 15% 7%;
+#Page {
+  padding: 15% 7% 15% 7%;
+}
+
+.page-header {
+  font-size: 9vw;
+  font-weight: bold;
+  text-align: center;
+}
+
+.glow-gb {
+  text-shadow: 0 0 20px #fff, 0 0 30px #06efe8, 0 0 40px #06efe8;
+}
+
+.Page-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  border-radius: 50%;
+  opacity: 1;
+  width: 100%;
+  height: 25vw;
+  transition: .5s ease;
+  backface-visibility: hidden;
+
+}
+
+@media (max-width: 980px) {
+
+  .image {
+    width: 70%;
+    height: 35vw;
   }
-  
+
   .page-header {
-    font-size: 9vw;
+    font-size: 200px;
     font-weight: bold;
     text-align: center;
   }
-  
-  .glow-gb {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #06efe8, 0 0 40px #06efe8, 0 0 50px #06efe8, 0 0 60px #06efe8, 0 0 70px #06efe8;
+
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  border: hidden;
+  color: white;
+  font-size: 20px;
+  padding: auto;
+}
+
+.member {
+  color: white;
+  font-size: 20px;
+  padding: 16px 20px;
+  background: linear-gradient(270deg, #ff0000, #0027ff);
+  background-size: 400% 400%;
+
+  -webkit-animation: member_bg 30s ease infinite;
+  -moz-animation: member_bg 30s ease infinite;
+  animation: member_bg 30s ease infinite;
+}
+
+@-webkit-keyframes member_bg {
+  0% {
+    background-position: 0% 50%
   }
-  
-  .Page-box {
-    text-align: center;
-    padding: 5%;
+
+  50% {
+    background-position: 100% 50%
   }
-  
-  .container {
-    position: relative;
-    width: 50%;
+
+  100% {
+    background-position: 0% 50%
   }
-  
-  .image {
-    border-radius: 50%;
-    opacity: 1;
-    width: 100%;
-    height: 25vw;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    
+}
+
+@-moz-keyframes member_bg {
+  0% {
+    background-position: 0% 50%
   }
-  @media (max-width: 980px) {
-  
-    .image {
-      width: 70%;
-      height: 35vw;
-    }
-    
-    .page-header {
-      font-size: 200px;
-      font-weight: bold;
-      text-align: center;
-    }
-  
+
+  50% {
+    background-position: 100% 50%
   }
-  
-  .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%)
+
+  100% {
+    background-position: 0% 50%
   }
-  
-  .container:hover .image {
-    opacity: 0.3;
+}
+
+@keyframes member_bg {
+  0% {
+    background-position: 0% 50%
   }
-  
-  .container:hover .middle {
-    opacity: 1;
+
+  50% {
+    background-position: 100% 50%
   }
-  
-  .text {
-    border: hidden;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 20px;
-    padding: auto ;
+
+  100% {
+    background-position: 0% 50%
   }
-  
-  .member{
-    background-color: rgb(6, 6, 6);
-    color: white;
-    font-size: 20px;
-    padding: 16px 20px;
-  }
+}
