--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,16 @@ body {
   font-family: 'Prompt', sans-serif !important;
   color: white !important;
 }
-i{
+
+.icon {
   color: #0036e6;
   padding-bottom: 10px;
 }
-i:hover{
+
+.icon:hover {
   color: #5574dc;
 }
+
 .anchor {
   scroll-margin-top: 100px;
 }
@@ -98,12 +101,12 @@ p {
 
 .glow-red {
   color: rgb(255, 255, 255);
-  text-shadow: 0 0 10px #fff, 0 0 30px #fff, 0 0 30px #dd9dbd, 0 0 50px #e859a0, 0 0 70px #e60073;
+  text-shadow: 0 0 30px #fff, 0 0 30px #dd9dbd, 0 0 70px #e60073;
 }
 
 .glow-blue {
   color: rgb(62, 87, 232) !important;
-  text-shadow: 0 0 10px #fff, 0 0 30px #fff, 0 0 30px #91abe5, 0 0 50px #5277f0, 0 0 70px #0036e6;
+  text-shadow: 0 0 30px #fff, 0 0 30px #91abe5, 0 0 70px #0036e6;
 }
 
 /*Fade in Image*/
@@ -164,6 +167,7 @@ p {
     opacity: 1;
   }
 }
+
 /* Navbar section */
 
 .nav {
@@ -172,6 +176,7 @@ p {
   position: fixed;
   line-height: 65px;
   text-align: center;
+  z-index: 1;
 }
 
 .nav div.logo {
